adding featured image support

--- a/templates/register.twig
+++ b/templates/register.twig
@@ -33,8 +33,8 @@
     <label for="password_confirm">Confirm Password:</label>
     <input type="password" name="password_confirm" id="password_confirm" required>
     
-    <label for="photo">Profile Picture:</label>
-    <input type="file" name="photo" id="photo" accept="image/*">
+    <label for="profile_picture">Profile Picture:</label>
+    <input type="file" name="profile_picture" id="profile_picture" accept="image/*">
     
     <button type="submit">Register</button>
 </form>
