--- a/templates/article.twig
+++ b/templates/article.twig
@@ -3,6 +3,18 @@
 {% block title %}{{ article.title }}{% endblock %}
 
 {% block content %}
+<nav>
+    <ul>
+        {% for lang in languages %}
+            <li>
+                <a href="?lang={{ lang.code }}" class="{{ lang.code == selected_language ? 'active' : '' }}">
+                    {{ lang.name }}
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+</nav>
+
 <article>
     <h2>{{ article.title }}</h2>
     <p><em>Published on {{ article.publication_date|date("F j, Y") }}</em></p>
