added new language functionality

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -3,19 +3,8 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<nav>
-    <ul>
-        {% for lang in languages %}
-            <li>
-                <a href="?lang={{ lang.code }}" class="{{ lang.code == selected_language ? 'active' : '' }}">
-                    {{ lang.name }}
-                </a>
-            </li>
-        {% endfor %}
-    </ul>
-</nav>
 
-<h2>Articles</h2>
+<h1>{{ trans('articles') }}</h1>
 <ul>
     {% for article in articles %}
         <li>
