--- a/templates/article.twig
+++ b/templates/article.twig
@@ -26,18 +26,39 @@
   <h2 class="tm-color-primary tm-post-title">{{ trans('comment_lists') }}</h2>
   <hr class="tm-hr-primary tm-mb-45">
   {% for comment in comments %}
-  <div class="tm-comment tm-mb-45 d-flex align-items-start">
+  <div class="tm-comment tm-mb-45 d-flex align-items-start"  data-comment-id="{{ comment.id }}">
     <figure class="tm-comment-figure">
       <img src="{{ comment.user_avatar|default('/assets/default_images/default-avatar.png') }}" alt="User Avatar" class="mb-2 rounded-circle img-thumbnail">
     </figure>
-    <div class="tm-comment-content">
+    <div class="tm-comment-content" >
       <figcaption class="tm-color-primary font-weight-bold">{{ comment.username }}</figcaption>
       <p class="tm-comment-text">{{ comment.comment_text }}</p>
-      <div class="d-flex justify-content-between">
+
+      <form action="/comments/{{ article.id }}/store" style="display: none;" method="POST" class="mb-5 tm-comment-form edit-comment-form">
+        <input type="hidden" name="{{ csrf.token_name_key }}" value="{{ csrf.token_name }}">
+        <input type="hidden" name="{{ csrf.token_value_key }}" value="{{ csrf.token_value }}">
+        <div class="mb-4">
+          <textarea class="form-control" name="comment_text" rows="6" placeholder="Your Comment" required> {{ comment.comment_text }} </textarea>
+        </div>
+        <div class="text-right">
+          <button type="button" class="tm-btn tm-btn-primary tm-btn-small save-comment-btn">Save</button>
+          <button type="button" class="tm-btn tm-btn-primary tm-btn-small cancel-edit-btn">Cancel</button>
+        </div>
+      </form>
+
+      <div class="d-flex justify-content-between align-items-center">
         <span class="tm-color-primary small">{{ comment.comment_date|date("F j, Y") }}</span>
         {% if comment.user_id == current_user_id or is_admin %}
-          <a href="#" class="tm-color-primary small edit-comment-btn">{{ trans('edit') }}</a>
-          <a href="#" class="tm-color-primary small delete-comment-btn">{{ trans('delete') }}</a>
+        <div class="comment-actions mt-2">
+          {# <form  style="display: none;" method="POST">
+            <textarea name="comment_text"></textarea>
+            <button type="button" class="save-comment-btn">Save</button>
+            <button type="button" class="cancel-edit-btn">Cancel</button>
+            </form> #}
+          <a href="#" class="tm-color-primary small edit-comment-link">{{ trans('edit') }}</a>
+          <span class="mx-2">|</span>
+          <a href="#" class="tm-color-primary small delete-comment-link">{{ trans('delete') }}</a>
+        </div>
         {% endif %}
       </div>
     </div>
@@ -46,134 +67,126 @@
   <p>No comments yet. Be the first to comment!</p>
   {% endfor %}
 
-  {% if comments or is_admin %}
+  {% if comment or is_admin %}
     <form action="/comments/{{ article.id }}/store" method="POST" class="mb-5 tm-comment-form">
       <h2 class="tm-color-primary tm-post-title mb-4">Leave a Comment</h2>
       <input type="hidden" name="{{ csrf.token_name_key }}" value="{{ csrf.token_name }}">
       <input type="hidden" name="{{ csrf.token_value_key }}" value="{{ csrf.token_value }}">
       <div class="mb-4">
-        <input class="form-control" name="name" type="text" placeholder="Your Name" required>
-      </div>
-      <div class="mb-4">
-        <input class="form-control" name="email" type="email" placeholder="Your Email" required>
-      </div>
-      <div class="mb-4">
-        <textarea class="form-control" name="message" rows="6" placeholder="Your Comment" required></textarea>
+        <textarea class="form-control" name="comment_text" rows="6" placeholder="Your Comment" required></textarea>
       </div>
       <div class="text-right">
         <button class="tm-btn tm-btn-primary tm-btn-small">Submit</button>
       </div>
     </form>
   {% endif %}
-  
+
 </div>
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
-      let csrfNameKey = '{{ csrf.token_name_key }}';
-      let csrfValueKey = '{{ csrf.token_value_key }}';
-      let csrfName = '{{ csrf.token_name }}';
-      let csrfValue = '{{ csrf.token_value }}';
+    let csrfNameKey = '{{ csrf.token_name_key }}';
+    let csrfValueKey = '{{ csrf.token_value_key }}';
+    let csrfName = '{{ csrf.token_name }}';
+    let csrfValue = '{{ csrf.token_value }}';
 
-      document.querySelectorAll('.edit-comment-btn').forEach(button => {
-        button.addEventListener('click', (e) => {
-          const commentDiv = e.target.closest('.comment');
-          commentDiv.querySelector('.comment-text').style.display = 'none';
-          commentDiv.querySelector('.edit-comment-btn').style.display = 'none';
-          commentDiv.querySelector('.edit-comment-form').style.display = 'block';
-        });
+    document.querySelectorAll('.edit-comment-link').forEach(button => {
+      button.addEventListener('click', (e) => {
+        e.preventDefault();
+        const commentDiv = e.target.closest('.tm-comment');
+        commentDiv.querySelector('.tm-comment-text').style.display = 'none';
+        commentDiv.querySelector('.edit-comment-link').style.display = 'none';
+        commentDiv.querySelector('.edit-comment-form').style.display = 'block';
       });
+    });
 
-      document.querySelectorAll('.cancel-edit-btn').forEach(button => {
-        button.addEventListener('click', (e) => {
-          const commentDiv = e.target.closest('.comment');
-          commentDiv.querySelector('.comment-text').style.display = 'block';
-          commentDiv.querySelector('.edit-comment-btn').style.display = 'inline';
+    document.querySelectorAll('.cancel-edit-btn').forEach(button => {
+      button.addEventListener('click', (e) => {
+        e.preventDefault();
+        const commentDiv = e.target.closest('.tm-comment');
+        commentDiv.querySelector('.tm-comment-text').style.display = 'block';
+        commentDiv.querySelector('.edit-comment-link').style.display = 'inline';
+        commentDiv.querySelector('.edit-comment-form').style.display = 'none';
+      });
+    });
+
+    document.querySelectorAll('.save-comment-btn').forEach(button => {
+      button.addEventListener('click', async (e) => {
+        e.preventDefault();
+        const commentDiv = e.target.closest('.tm-comment');
+        const commentId = commentDiv.dataset.commentId;
+        const commentText = commentDiv.querySelector('textarea[name="comment_text"]').value;
+
+        const createFormData = () => {
+          const formData = new FormData();
+          formData.append('comment_text', commentText);
+          formData.append(csrfNameKey, csrfName);
+          formData.append(csrfValueKey, csrfValue);
+          return formData;
+        };
+
+        const sendRequest = async (url, formData) => {
+          return await fetch(url, {
+            method: 'POST',
+            headers: {
+              'X-Requested-With': 'XMLHttpRequest'
+            },
+            body: formData
+          });
+        };
+
+        let response = await sendRequest(`/comments/${commentId}/update`, createFormData());
+
+        if (response.ok) {
+          const updatedComment = await response.json();
+          commentDiv.querySelector('.tm-comment-text').textContent = updatedComment.comment_text;
+          commentDiv.querySelector('.tm-comment-text').style.display = 'block';
+          commentDiv.querySelector('.edit-comment-link').style.display = 'inline';
           commentDiv.querySelector('.edit-comment-form').style.display = 'none';
-        });
+        } else {
+          const responseData = await response.json();
+          alert(responseData.error || 'Failed to update the comment. Please try again.');
+        }
       });
+    });
 
-      document.querySelectorAll('.save-comment-btn').forEach(button => {
-          button.addEventListener('click', async (e) => {
-              const commentDiv = e.target.closest('.comment');
-              const commentId = commentDiv.dataset.commentId;
-              const commentText = commentDiv.querySelector('textarea[name="comment_text"]').value;
+    document.querySelectorAll('.delete-comment-link').forEach(button => {
+      button.addEventListener('click', async (e) => {
+        e.preventDefault();
+        const commentDiv = e.target.closest('.tm-comment');
+        const commentId = commentDiv.dataset.commentId;
 
-              const createFormData = () => {
-                const formData = new FormData();
-                formData.append('comment_text', commentText);
-                formData.append(csrfNameKey, csrfName);
-                formData.append(csrfValueKey, csrfValue);
+        if (!confirm('Are you sure you want to delete this comment?')) {
+          return;
+        }
 
-                return formData;
-              };
+        const createFormData = () => {
+          const formData = new FormData();
+          formData.append(csrfNameKey, csrfName);
+          formData.append(csrfValueKey, csrfValue);
+          return formData;
+        };
 
-              const sendRequest = async (url, formData) => {
-                return await fetch(url, {
-                    method: 'POST',
-                    headers: {
-                        'X-Requested-With': 'XMLHttpRequest'
-                    },
-                    body: formData
-                });
-              };
-
-              let response = await sendRequest(`/comments/${commentId}/update`, createFormData());
-
-              if (response.ok) {
-                  const updatedComment = await response.json();
-
-                  commentDiv.querySelector('.comment-text').textContent = updatedComment.comment_text;
-                  commentDiv.querySelector('.comment-text').style.display = 'block';
-                  commentDiv.querySelector('.edit-comment-btn').style.display = 'inline';
-                  commentDiv.querySelector('.edit-comment-form').style.display = 'none';
-              } 
-              else if (response.status === 403 || !response.ok) {
-                const response = await response.json();
-
-                alert(response.error);
-              } 
+        const sendRequest = async (url, formData) => {
+          return await fetch(url, {
+            method: 'POST',
+            headers: {
+              'X-Requested-With': 'XMLHttpRequest'
+            },
+            body: formData
           });
+        };
+
+        let response = await sendRequest(`/comments/${commentId}/delete`, createFormData());
+
+        if (response.ok) {
+          commentDiv.remove();
+        } else {
+          const responseData = await response.json();
+          alert(responseData.error || 'Failed to delete the comment. Please try again.');
+        }
       });
-
-      document.querySelectorAll('.delete-comment-btn').forEach(button => {
-          button.addEventListener('click', async (e) => {
-              e.preventDefault();
-              const commentDiv = e.target.closest('.comment');
-              const commentId = commentDiv.dataset.commentId;
-
-              if (!confirm('Are you sure you want to delete this comment?')) {
-                  return;
-              }
-
-              const createFormData = () => {
-                  const formData = new FormData();
-                  formData.append(csrfNameKey, csrfName);
-                  formData.append(csrfValueKey, csrfValue);
-
-                  return formData;
-              };
-
-              const sendRequest = async (url, formData) => {
-                  return await fetch(url, {
-                      method: 'POST',
-                      headers: {
-                          'X-Requested-With': 'XMLHttpRequest'
-                      },
-                      body: formData
-                  });
-              };
-
-              let response = await sendRequest(`/comments/${commentId}/delete`, createFormData());
-
-              if (response.ok) {
-                  commentDiv.remove();
-              } else if (response.status === 403 || !response.ok) {
-                  const responseData = await response.json();
-                  alert(responseData.error || 'Failed to delete the comment. Please try again.');
-              }
-          });
-      });
+    });
   });
 </script>
 
