--- a/templates/admin/articles.twig
+++ b/templates/admin/articles.twig
@@ -36,7 +36,7 @@
 {#                      <a href="{{article.profile_picture}}" title="" rel="lightbox"><img src="{{article.profile_picture}}" alt="" style="width: 50px;height: 50px;">#}
 {#                      </a>#}
                       <button>
-                          <a href="/admin/article/edit/{{ article.id }}" class="edit-article-btn">Edit | </a>
+                          <a href="/admin/article/edit/{{ article.id }}" class="edit-article-btn">Edit </a>
                       </button>
 
                       <form action="/admin/article/delete/{{ article.id }}" method="POST" style="display: inline;">
