--- a/templates/admin/pages.twig
+++ b/templates/admin/pages.twig
@@ -34,13 +34,13 @@
               {#                      <a href="{{article.profile_picture}}" title="" rel="lightbox"><img src="{{article.profile_picture}}" alt="" style="width: 50px;height: 50px;">#}
               {#                      </a>#}
               <button>
-                <a href="/admin/page/edit/{{ article.id }}" class="edit-article-btn">Edit </a>
+                <a href="/admin/page/edit/{{ page.id }}" class="edit-article-btn">Edit </a>
               </button>
 
-              <form action="/admin/article/delete/{{ article.id }}" method="POST" style="display: inline;">
+              <form action="/admin/article/delete/{{ page.id }}" method="POST" style="display: inline;">
                 <input type="hidden" name="{{ csrf.token_name_key }}" value="{{ csrf.token_name }}">
                 <input type="hidden" name="{{ csrf.token_value_key }}" value="{{ csrf.token_value }}">
-                <button type="submit" class="delete-article-btn" onclick="return confirm('Are you sure you want to delete this article?');">Delete</button>
+                <button type="submit" class="delete-article-btn" onclick="return confirm('Are you sure you want to delete this page?');">Delete</button>
               </form>
             </td>
           </tr>
