--- a/templates/admin/layout.twig
+++ b/templates/admin/layout.twig
@@ -117,7 +117,7 @@
             <div class="userNav">
                 <ul>
                     <li><a href="#" title=""><img src="/assets/backend/default_images/icons/topnav/settings.png" alt="" /><span>Settings</span></a></li>
-                    <li><a href="login.html" title=""><img src="/assets/backend/default_images/icons/topnav/logout.png" alt="" /><span>Logout</span></a></li>
+                    <li><a href="/logout" title=""><img src="/assets/backend/default_images/icons/topnav/logout.png" alt="" /><span>Logout</span></a></li>
                 </ul>
             </div>
         </div>
