--- a/templates/admin/layout.twig
+++ b/templates/admin/layout.twig
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-<title>{% block title %}{{ page.meta_title|default('Jessica Jacobson') }}{% endblock %}</title>
+<title>{% block title %}{{ page.meta_title|default('NeuroSite – The lightweight, AI-powered CMS that makes your site fast, easy to manage, and SEO-smart by design.') }}{% endblock %}</title>
 <link href="/assets/backend/css/main.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/assets/backend/js/jquery.min.js"></script>
@@ -65,7 +65,7 @@
 
 <!-- Left side content -->
 <div id="leftSide">
-    <div class="logo"><a href="/admin"><img src="/assets/frontend/default_images/logo.png" alt="" style="height: 75px;width: 150px;" /></a></div>
+    <div class="logo"><a href="/admin"><img src="/assets/backend/default_images/logo.png" alt="" style="height: 75px;width: 150px;" /></a></div>
 
     <!-- Left navigation -->
     <ul id="menu" class="nav">
