--- a/templates/admin/layout.twig
+++ b/templates/admin/layout.twig
@@ -198,7 +198,7 @@
             	<ul>
                     <li><a href="/admin/article/create" title="{{trans('add_new_article')}}"><img src="/assets/backend/default_images/icons/control/32/plus.png" alt="" /><span>{{trans('add_new_article')}}</span></a></li>
                     <li><a href="/admin/articles" title="{{trans('articles_list')}}"><img src="/assets/backend/default_images/icons/control/32/order-149.png" alt="" /><span>{{trans('articles_list')}}</span></a></li>
-                    <li><a href="/admin/user/add" title="{{trans('add_new_user')}}"><img src="/assets/backend/default_images/icons/control/32/hire-me.png" alt="" /><span>{{trans('add_new_user')}}</span></a></li>
+                    <li><a href="/admin" title="{{trans('add_new_user')}}"><img src="/assets/backend/default_images/icons/control/32/hire-me.png" alt="" /><span>{{trans('add_new_user')}}</span></a></li>
                     <li><a href="/admin/comments" title="{{trans('review_comments')}}"><img src="/assets/backend/default_images/icons/control/32/comment.png"  alt="" /><span>{{trans('review_comments')}}</span></a></li>
                       <li><a href="/admin/pages" title="{{trans('pages_list')}}"><img src="/assets/backend/default_images/icons/control/32/order-149.png" alt="" /><span>{{trans('pages_list')}}</span></a></li>
                       <li><a href="/admin/pages/create" title="{{trans('add_new_page')}}"><img src="/assets/backend/default_images/icons/control/32/plus.png" alt="" /><span>{{trans('add_new_page')}}</span></a></li>
