--- a/templates/admin/layout.twig
+++ b/templates/admin/layout.twig
@@ -59,6 +59,10 @@
 
 <script type="text/javascript" src="/assets/backend/js/charts/chart.js"></script>
 
+{%block customstyles%}
+
+{%endblock%}
+
 </head>
 
 <body>
