--- a/templates/admin/page_create_form.twig
+++ b/templates/admin/page_create_form.twig
@@ -96,7 +96,7 @@
                     <div class="formRow">
                         <label>{{trans('page_parent')}}</label>
                         <div class="formRight">
-                            <select class="form-control fh5co_text_select_option" name="page_parent" onchange="this.form.submit()">
+                            <select class="form-control fh5co_text_select_option" name="page_parent">
                                 <option value="">Select Option</option>
                                 {% for p in pages %}
 
